Proper line wrapping now that layout issues are resolved

--- a/src/components/itinerary/itineraryPageListItem.scss
+++ b/src/components/itinerary/itineraryPageListItem.scss
@@ -25,7 +25,7 @@
 
   * {
     margin: 0;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   h1 {
